--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "start": "webpack --mode development --watch",
-    "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -35,5 +34,6 @@
     "webpack": "5.4.0",
     "webpack-bundle-analyzer": "^4.1.0",
     "webpack-cli": "^4.2.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
