Move package.json from backend folder to root

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node --inspect ./bin/www",
+    "start": "node --inspect ./backend/bin/www",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "dependencies": {
