--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "twit": "^2.2.11",
     "umzug": "^2.3.0",
     "wink-sentiment": "^5.0.2"
+  },
+  "engines": {
+    "node": "15.2.0",
+    "npm": "7.0.8"
   }
 }
