--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "dotenv-webpack": "^5.1.0",
     "fixed-size-queue": "^1.0.1",
     "mapbox-gl": "^1.12.0",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-loader-spinner": "^3.1.14",
